force-app/main/default/objects/util_closer_Settings__c/fields/Auto_Close_Reason_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Reason_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the batch job will populate the configured reason field on Cases when rules are applied. If enabled but the configured field does not exist, the batch job will abort with an error.</description>
    <inlineHelpText>Enable to automatically set a reason value when rules update Case status. Requires Auto Close Reason Field to be configured.</inlineHelpText>
    <label>Auto Close Reason Enabled</label>
    <type>Checkbox</type>
</CustomField>