force-app/main/default/objects/util_closer_Settings__c/fields/Auto_Close_Reason_Field__c.field-meta.xml
<CustomField>
    <fullName>Auto_Close_Reason_Field__c</fullName>
    <description>The API name of the Case field to populate with the reason value when rules are applied. This can be a text field or picklist field (e.g., Reason, Close_Reason__c). The field must exist on the Case object.</description>
    <inlineHelpText>Enter the API name of the Case field to store the reason (e.g., Reason or Close_Reason__c). Supports both text and picklist fields.</inlineHelpText>
    <label>Auto Close Reason Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>