force-app/main/default/objects/util_closer_Settings__c/fields/Batch_Size__c.field-meta.xml
<CustomField>
    <fullName>Batch_Size__c</fullName>
    <defaultValue>200</defaultValue>
    <description>Number of records per batch execution.</description>
    <inlineHelpText>Number of Case records to process in each batch execution. Default is 200.</inlineHelpText>
    <label>Batch Size</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>