force-app/main/default/objects/util_closer_Settings__c/fields/Completion_Notification_Emails__c.field-meta.xml
<CustomField>
    <fullName>Completion_Notification_Emails__c</fullName>
    <description>Semicolon-separated list of email addresses for job completion reports.</description>
    <inlineHelpText>Enter email addresses separated by semicolons to receive completion reports.</inlineHelpText>
    <label>Completion Notification Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>