force-app/main/default/objects/util_closer_Settings__c/fields/Error_Notification_Emails__c.field-meta.xml
<CustomField>
    <fullName>Error_Notification_Emails__c</fullName>
    <description>Semicolon-separated list of email addresses for error notifications.</description>
    <inlineHelpText>Enter email addresses separated by semicolons to receive error notifications.</inlineHelpText>
    <label>Error Notification Emails</label>
    <length>255</length>
    <type>Text</type>
</CustomField>