force-app/main/default/objects/util_closer_Settings__c/fields/Log_Retention_Days__c.field-meta.xml
<CustomField>
    <fullName>Log_Retention_Days__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Number of days to retain batch and case logs before cleanup.</description>
    <inlineHelpText>Logs older than this number of days will be deleted by the cleanup batch job. Default is 90 days.</inlineHelpText>
    <label>Log Retention Days</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>