force-app/main/default/objects/util_closer_Settings__c/fields/Simulation_Mode__c.field-meta.xml
<CustomField>
    <fullName>Simulation_Mode__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When enabled, the batch job will run in simulation mode - evaluating rules and logging what would be changed, but NOT actually updating any Case records. Use this to preview the impact of rules before enabling actual processing.</description>
    <inlineHelpText>Enable to run in dry-run mode. Cases will be evaluated but not updated. Check debug logs to see what would have been changed.</inlineHelpText>
    <label>Simulation Mode</label>
    <type>Checkbox</type>
</CustomField>